# DuctVision

./: .dockerignore  .gitignore  Dockerfile  README.md  annotation_engine.py  api.py  debug_pipes.py  dimension_extractor.py  docker-compose.yml  duct_detector.py  main.py  models.py  notes_extractor.py  ocr_engine.py  output_writer.py  pdf_renderer.py  pipe_marker.py  pressure_classifier.py  pyproject.toml  run.bat  scale_extractor.py  viewer_ui.py  vlm_detector.py
docs/: user-guide.md
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  api.ts  types.ts
output/: bedrock_pipe_response.txt  bedrock_regions.json  capsule_detect.json  pipe_pairs.json  pipes_data.json  summary.json  vlm_cells.json  vlm_response.txt  vlm_strips.json
tests/: conftest.py  test_dimension_extractor.py  test_scale_extractor.py
