[project]
name = "hvac-ducts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "PyMuPDF>=1.24.0",
    "opencv-python>=4.9.0",
    "pytesseract>=0.3.10",
    "numpy>=1.26.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "Pillow>=10.2.0",
    "timm>=1.0.0",
    "einops>=0.7.0",
    "boto3>=1.42.74",
    "python-dotenv>=1.2.2",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "hypothesis>=6.98.0",
]
